# agent-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  PR_DESCRIPTION.md  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml  trigger-labs-build.yml
benchmarks/: __init__.py  metrics.py  runner.py
deploy/cloudrun/: Dockerfile  README.md  cloudbuild.yaml  env.yaml.example  service.yaml
docs/: DEPLOYMENT.md  antora.yml  build.js  configuration.adoc  enrichment.adoc  entity-extraction.adoc  faq.adoc  getting-started.adoc  index.adoc  integrations.adoc  memory-types.adoc  package-lock.json  package.json  poleo-model.adoc  product-improvements.adoc  vercel.json
docs/assets/: style.css
docs/explanation/: framework-comparison.adoc  poleo-model.adoc
docs/reference/: configuration.adoc
docs/tutorials/: microsoft-agent-memory.adoc
examples/: .env.example  basic_usage.py  enrichment_example.py  entity_resolution.py  langchain_agent.py  pydantic_ai_agent.py
examples/aws-financial-services-advisor/: .env.example  Makefile  README.md
examples/aws-financial-services-advisor/backend/: handler.py  pyproject.toml
examples/aws-financial-services-advisor/backend/src/: __init__.py  config.py  main.py
examples/aws-financial-services-advisor/backend/src/agents/: __init__.py  aml_agent.py  compliance_agent.py  kyc_agent.py  prompts.py  relationship_agent.py  supervisor.py
examples/aws-financial-services-advisor/backend/src/api/: __init__.py
examples/aws-financial-services-advisor/backend/src/api/routes/: __init__.py  alerts.py  chat.py  customers.py  graph.py  investigations.py  reports.py
examples/aws-financial-services-advisor/backend/src/models/: __init__.py  alert.py  customer.py  investigation.py  report.py  transaction.py
examples/aws-financial-services-advisor/backend/src/services/: __init__.py  memory_service.py  risk_service.py
examples/aws-financial-services-advisor/backend/tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_services.py  test_tools.py
examples/domain-schemas/: README.md  business_reports.py  entertainment_content.py  legal_documents.py  medical_records.py  news_articles.py  podcast_transcripts.py  poleo_investigations.py  scientific_papers.py
examples/full-stack-chat-agent/: README.md  docker-compose.yml
examples/full-stack-chat-agent/backend/: .env.example  pyproject.toml  requirements.txt
examples/full-stack-chat-agent/backend/src/: config.py  main.py
examples/full-stack-chat-agent/backend/src/api/: schemas.py
examples/full-stack-chat-agent/backend/src/api/routes/: chat.py  memory.py  threads.py
examples/full-stack-chat-agent/backend/src/memory/: client.py
examples/google-cloud-financial-advisor/: .env.example  Makefile  README.md  docker-compose.yml
examples/google-cloud-financial-advisor/backend/: Dockerfile  pyproject.toml
examples/google-cloud-financial-advisor/backend/src/: __init__.py  config.py  main.py
examples/google-cloud-financial-advisor/backend/src/agents/: __init__.py  aml_agent.py  compliance_agent.py  kyc_agent.py  prompts.py  relationship_agent.py  supervisor.py
examples/google-cloud-financial-advisor/backend/src/api/: __init__.py
examples/google-cloud-financial-advisor/backend/src/api/routes/: __init__.py  alerts.py  chat.py  customers.py  graph.py  investigations.py  traces.py
examples/google-cloud-financial-advisor/backend/src/models/: __init__.py  alert.py  chat.py  customer.py  investigation.py
examples/google-cloud-financial-advisor/backend/src/services/: __init__.py  memory_service.py  neo4j_service.py
examples/google-cloud-financial-advisor/backend/src/tools/: __init__.py  aml_tools.py  compliance_tools.py  kyc_tools.py  relationship_tools.py
examples/google_adk_demo/: .env.example  README.md  demo.py
examples/google_cloud_integration/: .env.example  README.md  adk_memory_service.py  full_pipeline.py  mcp_server_demo.py  vertex_ai_embeddings.py
examples/lennys-memory/: .env.example  Makefile  README.md  docker-compose.yml
examples/lennys-memory/backend/: .env.example  pyproject.toml  requirements.txt
examples/lennys-memory/backend/src/: config.py  main.py
examples/lennys-memory/backend/src/agent/: agent.py  dependencies.py  tools.py
examples/lennys-memory/backend/src/api/: schemas.py
examples/lennys-memory/backend/src/api/routes/: chat.py  memory.py  threads.py
examples/lennys-memory/backend/src/memory/: client.py
examples/lennys-memory/backend/tests/: conftest.py  test_enrich_entities.py  test_tools.py
examples/microsoft_agent_retail_assistant/: README.md
scripts/: manage_diagrams.py
src/neo4j_agent_memory/: __init__.py
tests/: conftest.py
tests/docs/: conftest.py  test_build_pipeline.py  test_code_snippets.py  test_links.py
tests/examples/: test_basic_usage.py  test_crewai_example.py  test_entity_resolution.py  test_financial_advisor_neo4j_integration.py  test_full_stack_apps.py  test_google_adk_demo.py  test_google_cloud_financial_advisor.py  test_google_cloud_integration.py  test_langchain_agent.py  test_llamaindex_example.py  test_microsoft_agent_example.py  test_pydantic_ai_agent.py
tests/integration/: test_aws_integration.py  test_crewai_integration.py  test_entity_resolution.py  test_examples.py  test_google_adk_integration.py  test_graph_export.py  test_langchain_integration.py  test_llamaindex_integration.py  test_location_queries.py  test_long_term_memory.py  test_mcp_server_integration.py  test_memory_client.py  test_microsoft_agent_integration.py  test_openai_agents_integration.py  test_poleo_integration.py  test_procedural_memory.py  test_pydantic_ai_integration.py  test_reasoning_memory.py  test_short_term_memory.py  test_vertex_ai_integration.py
tests/unit/: test_batch_extraction.py  test_benchmarks.py  test_cli.py  test_config.py  test_enrichment.py  test_entity_deduplication.py  test_extraction.py  test_extraction_pipeline.py  test_geocoder.py  test_glirel_extractor.py  test_models.py  test_observability.py  test_poleo_schema.py  test_provenance_tracking.py  test_query_builder.py  (+3 more)
(+373 files in other folders)
