[project]
name = "neo4j-agent-memory"
version = "0.0.2"
description = "A comprehensive memory system for AI agents using Neo4j"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "William Lyon", email = "lyonwj@gmail.com" }
]
keywords = [
    "neo4j",
    "ai",
    "agent",
    "memory",
    "llm",
    "langchain",
    "llamaindex",
    "pydantic-ai",
    "crewai",
    "openai-agents",
    "knowledge-graph",
    "context-graph",
    "reasoning-memory"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",
]

dependencies = [
    "neo4j>=5.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
# Embedding providers
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
sentence-transformers = ["sentence-transformers>=2.2.0"]

# Entity extraction
spacy = ["spacy>=3.7.0"]
gliner = ["gliner>=0.2.0"]

# Extraction pipeline (spaCy + GLiNER)
extraction = ["spacy>=3.7.0", "gliner>=0.2.0"]

# Entity resolution
fuzzy = ["rapidfuzz>=3.0.0"]

# CLI tools
cli = ["click>=8.0.0", "rich>=13.0.0"]

# Observability
opentelemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
opik = ["opik>=1.0.0"]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

# Framework integrations
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.10.0"]
pydantic-ai = ["pydantic-ai>=0.1.0"]
crewai = ["crewai>=0.50.0"]
openai-agents = ["openai>=1.0.0"]

# All optional dependencies (excluding heavy ML models by default)
all = [
    "neo4j-agent-memory[openai,anthropic,fuzzy,langchain,llamaindex,pydantic-ai,crewai,openai-agents]",
]

# Full install including local models and extraction pipeline
full = [
    "neo4j-agent-memory[all,sentence-transformers,spacy,gliner]",
]

[project.scripts]
neo4j-memory = "neo4j_agent_memory.cli:main"

[project.urls]
Homepage = "https://github.com/neo4j-labs/agent-memory"
Documentation = "https://neo4j-agent-memory.vercel.app/"
Repository = "https://github.com/neo4j-labs/agent-memory"
Issues = "https://github.com/neo4j-labs/agent-memory/issues"
Changelog = "https://github.com/neo4j-labs/agent-memory/releases"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
    "testcontainers[neo4j]>=4.0.0",
    "beautifulsoup4>=4.12.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neo4j_agent_memory"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]
exclude = [
    "/.gitignore",
    ".gitignore",
    "**/.gitignore",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Neo4j)",
    "benchmark: marks tests as benchmark tests",
    "docs: marks tests as documentation tests",
    "syntax: marks tests as syntax-only validation (fast)",
    "imports: marks tests as import validation (medium)",
    "slow: marks tests as slow (external link checks, full builds)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "sentence_transformers.*",
    "spacy.*",
    "gliner.*",
    "rapidfuzz.*",
    "langchain_core.*",
    "llama_index.*",
    "crewai.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ARG001", # unused function argument (common in factory functions)
    "ARG002", # unused method argument (common in base classes/interfaces)
    "SIM108", # ternary operator (can reduce readability)
    "SIM105", # contextlib.suppress (explicit try/except can be clearer)
    "SIM102", # nested if statements (can be clearer than combined conditions)
    "SIM103", # return condition directly (explicit if/else can be clearer)
    "SIM113", # use enumerate (manual index can be clearer in some cases)
    "B004",   # hasattr callable check (sometimes intentional)
    "B007",   # unused loop variable (sometimes intentional for iteration)
    "B904",   # raise from in except (can add noise without benefit)
    "B905",   # zip strict parameter (not always needed)
]

[tool.ruff.lint.per-file-ignores]
"src/neo4j_agent_memory/__init__.py" = ["E402"]  # module level imports not at top (intentional for lazy loading)
"tests/**/*.py" = [
    "E402",  # module level imports not at top (common in tests with importorskip)
    "F401",  # imported but unused (common for type checking in tests)
    "F841",  # local variable assigned but never used (common in tests for side effects)
    "B017",  # assert blind exception (acceptable in tests)
    "E741",  # ambiguous variable name (acceptable in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["neo4j_agent_memory"]

[tool.coverage.run]
source = ["src/neo4j_agent_memory"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
