[project]
name = "news-chat-agent"
version = "0.1.0"
description = "Full-stack chat agent with neo4j-agent-memory integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-ai>=0.0.39",
    "pydantic-settings>=2.6.0",
    "neo4j>=5.26.0",
    "sse-starlette>=2.2.0",
    "python-dotenv>=1.0.0",
    "neo4j-agent-memory",
]

[tool.uv]
package = true

[tool.uv.sources]
# For local development, use the editable path:
# neo4j-agent-memory = { path = "../../..", editable = true }
# For deployment (Railway/production), use the Git URL:
neo4j-agent-memory = { git = "https://github.com/neo4j-labs/agent-memory", subdirectory = "neo4j-agent-memory" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
