[project]
name = "lennys-memory-backend"
version = "0.1.0"
description = "Lenny's Podcast Memory Explorer - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-ai>=0.0.39",
    "pydantic-settings>=2.6.0",
    "neo4j>=5.26.0",
    "sse-starlette>=2.2.0",
    "python-dotenv>=1.0.0",
    "neo4j-agent-memory[extraction,openai]",
    "spacy>=3.7.0",
    "gliner>=0.2.0",
    "glirel>=0.1.0",
    "loguru>=0.7.0",
    "en-core-web-sm",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.uv]
package = true

[tool.uv.sources]
# For local development, use the editable path:
neo4j-agent-memory = { path = "../../..", editable = true }
# For deployment (Railway/production), use the Git URL:
# neo4j-agent-memory = { git = "https://github.com/neo4j-labs/agent-memory" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (require Neo4j)",
]
